--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -33,11 +33,61 @@
                         <segue destination="uej-ya-UBt" kind="push" identifier="AnimationVC" id="f9U-az-oJ1"/>
                         <segue destination="u6i-df-1A3" kind="push" identifier="MessVC" id="WQj-4n-Q1Z"/>
                         <segue destination="qzB-8S-awF" kind="push" identifier="TestVC" id="DeR-Fe-khK"/>
+                        <segue destination="8ud-g3-1KC" kind="push" identifier="NetworkVC" id="TkI-HH-JJn"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v6q-Q2-YJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-269" y="-239"/>
+        </scene>
+        <!--NetworkVC-->
+        <scene sceneID="d7a-aQ-cda">
+            <objects>
+                <viewController id="8ud-g3-1KC" customClass="NetworkVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4W2-Rm-ClR">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTn-fu-85s">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="get">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickGet:" destination="8ud-g3-1KC" eventType="touchUpInside" id="KUU-6Y-6Jo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nGJ-GA-2NJ">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="post">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickPost:" destination="8ud-g3-1KC" eventType="touchUpInside" id="fL6-EQ-3eS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nGJ-GA-2NJ" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="80" id="KfB-Fh-nBd"/>
+                            <constraint firstItem="nTn-fu-85s" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="crf-0l-5qp"/>
+                            <constraint firstItem="nTn-fu-85s" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="khB-TB-ddK"/>
+                            <constraint firstItem="nGJ-GA-2NJ" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="x6P-0T-e9f"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="9bq-Sh-Gae"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I4I-A7-HXj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="286" y="63"/>
         </scene>
         <!--TestVC-->
         <scene sceneID="HQU-cI-rQg">
@@ -141,7 +191,6 @@
         <!--Navigation Controller - Dome-->
         <scene sceneID="xqk-sK-eoU">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Qc2-TQ-3Gh" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="zU8-h0-QWo" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Dome" id="fxi-bU-Jlf"/>
                     <toolbarItems/>
@@ -158,6 +207,7 @@
                         <segue destination="VON-WD-2Cb" kind="relationship" relationship="rootViewController" id="18w-C9-hqi"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qc2-TQ-3Gh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-667" y="-239"/>
         </scene>
