--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -74,16 +74,41 @@
                                     <action selector="clickPost:" destination="8ud-g3-1KC" eventType="touchUpInside" id="fL6-EQ-3eS"/>
                                 </connections>
                             </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Je5-Bd-1bE">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="MEj-ik-KkG"/>
+                                </constraints>
+                            </progressView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IpS-jw-U4V">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="download">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickDownload:" destination="8ud-g3-1KC" eventType="touchUpInside" id="nnC-yl-DtB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="IpS-jw-U4V" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="152" id="Jj3-60-TCP"/>
+                            <constraint firstItem="Je5-Bd-1bE" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Jj8-DB-I8i"/>
                             <constraint firstItem="nGJ-GA-2NJ" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="80" id="KfB-Fh-nBd"/>
                             <constraint firstItem="nTn-fu-85s" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="crf-0l-5qp"/>
+                            <constraint firstItem="Je5-Bd-1bE" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="86" id="ezh-6i-LoD"/>
                             <constraint firstItem="nTn-fu-85s" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="khB-TB-ddK"/>
+                            <constraint firstItem="IpS-jw-U4V" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="oLR-0F-aQU"/>
                             <constraint firstItem="nGJ-GA-2NJ" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="x6P-0T-e9f"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9bq-Sh-Gae"/>
+                    <connections>
+                        <outlet property="progressDownload" destination="Je5-Bd-1bE" id="Vgz-V7-Xdj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I4I-A7-HXj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
