--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -92,16 +92,31 @@
                                     <action selector="clickDownload:" destination="8ud-g3-1KC" eventType="touchUpInside" id="nnC-yl-DtB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VB5-wG-BvX">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="stop download">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickStopDownload:" destination="8ud-g3-1KC" eventType="touchUpInside" id="0s5-A7-4Cu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IpS-jw-U4V" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="152" id="Jj3-60-TCP"/>
+                            <constraint firstItem="Je5-Bd-1bE" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="170" id="1MM-KG-7kv"/>
+                            <constraint firstItem="IpS-jw-U4V" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="110" id="F9A-Na-19s"/>
+                            <constraint firstItem="IpS-jw-U4V" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="IfK-PZ-hEW"/>
                             <constraint firstItem="Je5-Bd-1bE" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Jj8-DB-I8i"/>
                             <constraint firstItem="nGJ-GA-2NJ" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="80" id="KfB-Fh-nBd"/>
+                            <constraint firstItem="VB5-wG-BvX" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="134" id="N22-iq-RBV"/>
+                            <constraint firstItem="VB5-wG-BvX" firstAttribute="baseline" secondItem="IpS-jw-U4V" secondAttribute="baseline" type="default" id="W7Z-qc-CDC"/>
                             <constraint firstItem="nTn-fu-85s" firstAttribute="leading" secondItem="4W2-Rm-ClR" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="crf-0l-5qp"/>
-                            <constraint firstItem="Je5-Bd-1bE" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="86" id="ezh-6i-LoD"/>
                             <constraint firstItem="nTn-fu-85s" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="khB-TB-ddK"/>
-                            <constraint firstItem="IpS-jw-U4V" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="oLR-0F-aQU"/>
                             <constraint firstItem="nGJ-GA-2NJ" firstAttribute="top" secondItem="4W2-Rm-ClR" secondAttribute="top" constant="20" symbolic="YES" type="default" id="x6P-0T-e9f"/>
                         </constraints>
                     </view>
@@ -237,6 +252,36 @@
             <point key="canvasLocation" x="-667" y="-239"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="AnimationVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AnimationVC.h"/>
+        </class>
+        <class className="DomeTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DomeTableViewController.h"/>
+        </class>
+        <class className="MessVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MessVC.h"/>
+            <relationships>
+                <relationship kind="action" name="ClickBtnShade:"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="NetworkVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkVC.h"/>
+            <relationships>
+                <relationship kind="action" name="clickDownload:"/>
+                <relationship kind="action" name="clickGet:"/>
+                <relationship kind="action" name="clickPost:"/>
+                <relationship kind="action" name="clickStopDownload:"/>
+                <relationship kind="outlet" name="progressDownload" candidateClass="UIProgressView"/>
+            </relationships>
+        </class>
+        <class className="TestVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TestVC.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
