--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -34,11 +34,12 @@
                         <segue destination="u6i-df-1A3" kind="push" identifier="MessVC" id="WQj-4n-Q1Z"/>
                         <segue destination="qzB-8S-awF" kind="push" identifier="TestVC" id="DeR-Fe-khK"/>
                         <segue destination="8ud-g3-1KC" kind="push" identifier="NetworkVC" id="TkI-HH-JJn"/>
+                        <segue destination="vat-fs-THh" kind="push" identifier="JsonVC" id="B9s-62-jZ9"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v6q-Q2-YJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-269" y="-239"/>
+            <point key="canvasLocation" x="-229" y="-239"/>
         </scene>
         <!--NetworkVC-->
         <scene sceneID="d7a-aQ-cda">
@@ -128,6 +129,56 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I4I-A7-HXj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="286" y="63"/>
+        </scene>
+        <!--JsonVC-->
+        <scene sceneID="GCU-Se-UPa">
+            <objects>
+                <viewController id="vat-fs-THh" customClass="JsonVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8DQ-N3-Mnq">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWj-lw-2cC">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="testString">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickTestString:" destination="vat-fs-THh" eventType="touchUpInside" id="J91-jk-yEQ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ohE-BH-0n4">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="testData">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickTestData:" destination="vat-fs-THh" eventType="touchUpInside" id="JfL-Jb-oQk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ohE-BH-0n4" firstAttribute="top" secondItem="8DQ-N3-Mnq" secondAttribute="top" constant="20" symbolic="YES" type="default" id="5no-ze-sL8"/>
+                            <constraint firstItem="bWj-lw-2cC" firstAttribute="leading" secondItem="8DQ-N3-Mnq" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Mqj-Cb-rSp"/>
+                            <constraint firstAttribute="trailing" secondItem="ohE-BH-0n4" secondAttribute="trailing" constant="73" id="SHR-81-e2k"/>
+                            <constraint firstItem="ohE-BH-0n4" firstAttribute="baseline" secondItem="bWj-lw-2cC" secondAttribute="baseline" type="default" id="Y44-2c-Xvf"/>
+                            <constraint firstItem="bWj-lw-2cC" firstAttribute="top" secondItem="8DQ-N3-Mnq" secondAttribute="top" constant="20" symbolic="YES" type="default" id="vkS-nN-CoA"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="KqK-PL-bgV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JGY-JC-npJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="298" y="749"/>
         </scene>
         <!--TestVC-->
         <scene sceneID="HQU-cI-rQg">
@@ -258,6 +309,13 @@
         </class>
         <class className="DomeTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DomeTableViewController.h"/>
+        </class>
+        <class className="JsonVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JsonVC.h"/>
+            <relationships>
+                <relationship kind="action" name="clickTestData:"/>
+                <relationship kind="action" name="clickTestString:"/>
+            </relationships>
         </class>
         <class className="MessVC" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MessVC.h"/>
