--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -36,6 +36,7 @@
                         <segue destination="qzB-8S-awF" kind="push" identifier="TestVC" id="DeR-Fe-khK"/>
                         <segue destination="8ud-g3-1KC" kind="push" identifier="NetworkVC" id="TkI-HH-JJn"/>
                         <segue destination="vat-fs-THh" kind="push" identifier="JsonVC" id="B9s-62-jZ9"/>
+                        <segue destination="gta-pL-g3S" kind="push" identifier="DataLiteVC" id="A6X-a4-BDC"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v6q-Q2-YJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -181,6 +182,21 @@
             </objects>
             <point key="canvasLocation" x="298" y="749"/>
         </scene>
+        <!--Data LiteVC-->
+        <scene sceneID="5mL-Up-H7F">
+            <objects>
+                <viewController id="gta-pL-g3S" customClass="DataLiteVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dWG-po-7GN">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="oJX-te-RuV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wsN-oK-ugp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="290" y="1419"/>
+        </scene>
         <!--TestVC-->
         <scene sceneID="HQU-cI-rQg">
             <objects>
@@ -304,43 +320,6 @@
             <point key="canvasLocation" x="-667" y="-239"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="AnimationVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AnimationVC.h"/>
-        </class>
-        <class className="DomeTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DomeTableViewController.h"/>
-        </class>
-        <class className="JsonVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/JsonVC.h"/>
-            <relationships>
-                <relationship kind="action" name="clickTestData:"/>
-                <relationship kind="action" name="clickTestString:"/>
-            </relationships>
-        </class>
-        <class className="MessVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MessVC.h"/>
-            <relationships>
-                <relationship kind="action" name="ClickBtnShade:"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="NetworkVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkVC.h"/>
-            <relationships>
-                <relationship kind="action" name="clickDownload:"/>
-                <relationship kind="action" name="clickGet:"/>
-                <relationship kind="action" name="clickPost:"/>
-                <relationship kind="action" name="clickStopDownload:"/>
-                <relationship kind="outlet" name="progressDownload" candidateClass="UIProgressView"/>
-            </relationships>
-        </class>
-        <class className="TestVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TestVC.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
