--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -204,7 +204,41 @@
                     <view key="view" contentMode="scaleToFill" id="hox-S5-D7R">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SZx-FJ-Asn">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button1">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickBtn1:" destination="qzB-8S-awF" eventType="touchUpInside" id="eod-jq-KHw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oDJ-dg-kkK">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button2">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickBtn2:" destination="qzB-8S-awF" eventType="touchUpInside" id="iLL-7y-t7X"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oDJ-dg-kkK" firstAttribute="leading" secondItem="SZx-FJ-Asn" secondAttribute="leading" type="default" id="aOL-sH-nBz"/>
+                            <constraint firstItem="SZx-FJ-Asn" firstAttribute="leading" secondItem="hox-S5-D7R" secondAttribute="leading" constant="14" id="cBo-Hz-Yno"/>
+                            <constraint firstItem="oDJ-dg-kkK" firstAttribute="top" secondItem="hox-S5-D7R" secondAttribute="top" constant="80" id="g0k-mo-G11"/>
+                            <constraint firstItem="SZx-FJ-Asn" firstAttribute="top" secondItem="hox-S5-D7R" secondAttribute="top" constant="20" symbolic="YES" type="default" id="sg3-Tn-7Xa"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eIS-vQ-bgo"/>
                 </viewController>
