add 宏: XY_ONCE_BEGIN
只执行一次

--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -203,6 +203,16 @@
                                     <action selector="clickAVSpeech:" destination="qzB-8S-awF" eventType="touchUpInside" id="x6c-LF-qdY"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lAn-Ym-5Vi">
+                                <rect key="frame" x="19" y="188" width="37" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Once">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickOnce:" destination="qzB-8S-awF" eventType="touchUpInside" id="ngM-9g-b4b"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
