--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="zz8-6Z-mRL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13A598" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="zz8-6Z-mRL">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -38,11 +38,12 @@
                         <segue destination="vat-fs-THh" kind="push" identifier="JsonVC" id="B9s-62-jZ9"/>
                         <segue destination="gta-pL-g3S" kind="push" identifier="DataLiteVC" id="A6X-a4-BDC"/>
                         <segue destination="5k6-n1-nlt" kind="push" identifier="DatabaseVC" id="cw5-M5-J7I"/>
+                        <segue destination="EKU-hd-IO3" kind="push" identifier="ParallaxVC" id="tum-Sn-3df"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v6q-Q2-YJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-229" y="-239"/>
+            <point key="canvasLocation" x="-281" y="-271"/>
         </scene>
         <!--NetworkVC-->
         <scene sceneID="d7a-aQ-cda">
@@ -167,6 +168,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sLU-Hr-SyK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="975" y="-773"/>
+        </scene>
+        <!--ParallaxVC-->
+        <scene sceneID="xjh-Bk-78p">
+            <objects>
+                <viewController id="EKU-hd-IO3" customClass="ParallaxVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qKh-tN-Go7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="HYx-Qw-cvw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Uq-Hh-NNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1590" y="-782"/>
         </scene>
         <!--TestVC-->
         <scene sceneID="HQU-cI-rQg">
